<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/take_ticket_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/take_ticket_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/take_ticket_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_centerInParent="true"
            android:text="@string/take_photo" />

        <Button
            android:id="@+id/take_ticket_album_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/album" />
    </RelativeLayout>

    <SurfaceView
        android:id="@+id/take_ticket_surfaceview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/take_ticket_bottom_view"/>

</RelativeLayout>