<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/take_ticket_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/ticket_rework_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/rework" />

        <TextView
            android:id="@+id/take_ticket_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_centerInParent="true"
            android:text="@string/preview" />

        <Button
            android:id="@+id/ticket_upload_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/upload" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/ticket_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/take_ticket_bottom_view"
        android:contentDescription="@string/preview"/>

</RelativeLayout>